Finalizado cadastro de produto

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Aula6/LojaConstrucao/.vs/LojaConstrucao/FileContentIndex
+/SisCad
