--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Aula6/LojaConstrucao/.vs/LojaConstrucao/FileContentIndex
+/SisCad
+/.gitignore
+/.gitignore
