Clone Repository new machine

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@
 /Aula7/Siscad/bin/Debug/net8.0
 /Aula7/Siscad/obj/Debug/net8.0
 /Aula7/Siscad/.vs/Siscad
+/Aula10/AulaIdenity/AulaIdenity/obj/Release/net8.0
+/.vs/ASP_NET_8
+/Aula2
+/Aula3
+/Aula4/NavegacaoBasica/obj/Release/net8.0
+/Aula5/Loja/obj/Release/net8.0
+/Aula5/Loja/obj/Release/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/Aula6/LojaConstrucao/Loja/obj/Release/net8.0
+/Aula7/Siscad/obj/Release/net8.0
+/Aula9/CrudEntity/obj/Release/net8.0
+/.vs
