--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /Aula11/ExercicioAula11_CadastroAlunoEntity
 /Aula6/LojaConstrucao/.vs/ProjectEvaluation
 /Aula5/.vs/ProjectEvaluation
+/Aula15/MinimalAPI/.vs
+/.gitignore
+/.gitignore
